force-app/main/default/objects/AbacusInterface__c/AbacusInterface__c.object-meta.xml
<CustomObject>
    <label>Abacus Interface</label>
    <nameField>
        <displayFormat>ABINT-{000000}</displayFormat>
        <label>Abacus Interface Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abacus Interface</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>