force-app/main/default/objects/AbacusInterface__c/fields/AbacusAccountNr__c.field-meta.xml
<CustomField>
    <fullName>AbacusAccountNr__c</fullName>
    <formula>Account__r.AbacusAccountNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abacus Account Nr.</label>
    <type>Text</type>
</CustomField>