force-app/main/default/objects/AbacusInterface__c/fields/DateTimeFrom__c.field-meta.xml
<CustomField>
    <fullName>DateTimeFrom__c</fullName>
    <label>Finance Date/Time (From)</label>
    <type>DateTime</type>
</CustomField>