force-app/main/default/objects/AbacusInterface__c/fields/DateTimeUntil__c.field-meta.xml
<CustomField>
    <fullName>DateTimeUntil__c</fullName>
    <label>Finance Date/Time (Until)</label>
    <type>DateTime</type>
</CustomField>