force-app/main/default/objects/AbacusInterface__c/fields/FolderPathXMLFile__c.field-meta.xml
<CustomField>
    <fullName>FolderPathXMLFile__c</fullName>
    <label>Folder Path XML File</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>InterfaceType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>\\BLC-ABA-01\SkywalkAbacusIntegration\Export\Account\Queue</fullName>
            </value>
            <value>
                <fullName>\\BLC-ABA-01\SkywalkAbacusIntegration\Export\Project\Queue</fullName>
            </value>
            <value>
                <fullName>\\BLC-ABA-01\SkywalkAbacusIntegration\Export\Invoice\Queue</fullName>
            </value>
            <value>
                <fullName>\\BLC-ABA-01\SkywalkAbacusIntegration\Export\StaffHour\Queue</fullName>
            </value>
            <value>
                <fullName>\\BLC-ABA-01\SkywalkAbacusIntegration\Import\Currency\Queue</fullName>
            </value>
            <value>
                <fullName>\\BLC-ABA-01\SkywalkAbacusIntegration\Import\SupplierInvoice\Queue</fullName>
            </value>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>