force-app/main/default/objects/AbacusInterface__c/fields/LastRunDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastRunDateTime__c</fullName>
    <label>Last Run (Date/Time)</label>
    <type>DateTime</type>
</CustomField>