force-app/main/default/objects/AbacusInterface__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepared</fullName>
                <default>true</default>
                <label>Prepared</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Finished - No Errors</fullName>
            </value>
            <value>
                <fullName>Finished - With Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>