force-app/main/default/objects/AbacusInterface__c/validationRules/ABA001_AccountDebtorUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>ABA001_AccountDebtorUpdate</fullName>
    <active>true</active>
    <description>Account = Debtor Flag True</description>
    <errorConditionFormula>AND( 
$User.PS480FunctionValidationRulesActive__c =true, 
ISPICKVAL( InterfaceType__c ,&quot;Account Debtor Upsert&quot;),
Account__r.AbacusDebtor__c = false
)</errorConditionFormula>
    <errorMessage>This Account is not a Debtor and can therefore not be transferred to Abacus.
(ABA001)</errorMessage>
</ValidationRule>