force-app/main/default/objects/AbacusInterface__c/validationRules/ABA002_AccountSupplierUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>ABA002_AccountSupplierUpdate</fullName>
    <active>true</active>
    <description>Account = Supplier Flag True</description>
    <errorConditionFormula>AND( 
$User.PS480FunctionValidationRulesActive__c =true, 
ISPICKVAL( InterfaceType__c ,&quot;Account Supplier Upsert&quot;),
Account__r.AbacusSupplier__c = false
)</errorConditionFormula>
    <errorMessage>This Account is not a Supplier and can therefore not be transferred to Abacus.
(ABA002)</errorMessage>
</ValidationRule>