force-app/main/default/objects/AbacusInterface__c/validationRules/ABA004_InvoiceAccountInternalOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>ABA004_InvoiceAccountInternalOnly</fullName>
    <active>true</active>
    <description>For Invoice Export, must be Internal Account</description>
    <errorConditionFormula>AND( 
OR(
ISPICKVAL( InterfaceType__c ,&quot;Invoice Export&quot;),
ISPICKVAL( InterfaceType__c ,&quot;Cancellation Export&quot;)
),
$User.PS480FunctionValidationRulesActive__c =true, 
Account__r.RecordType.DeveloperName != &quot;InternalAccount&quot;
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Please choose an internal Account for Invoice Export.
(ABA004)</errorMessage>
</ValidationRule>