force-app/main/default/objects/AbacusInterface__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>DateTimeFrom__c</columns>
    <columns>DateTimeUntil__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LastRunDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>