force-app/main/default/objects/AbacusInterface__c/listViews/All_Account_Export_Debtor.listView-meta.xml
<ListView>
    <fullName>All_Account_Export_Debtor</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>AbacusAccountNr__c</columns>
    <columns>DateTimeFrom__c</columns>
    <columns>DateTimeUntil__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LastRunDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceType__c</field>
        <operation>equals</operation>
        <value>Account Debtor Upsert</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>5/1/2017 12:00 AM</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Prepared,Queued,Finished - No Errors</value>
    </filters>
    <label>All Account Export - Debtor</label>
</ListView>