force-app/main/default/objects/AbacusInterface__c/listViews/All_Account_Export_Supplier.listView-meta.xml
<ListView>
    <fullName>All_Account_Export_Supplier</fullName>
    <columns>NAME</columns>
    <columns>InterfaceType__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>AbacusAccountNr__c</columns>
    <columns>DateTimeFrom__c</columns>
    <columns>DateTimeUntil__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LastRunDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceType__c</field>
        <operation>equals</operation>
        <value>Account Supplier Upsert</value>
    </filters>
    <label>All Account Export - Supplier</label>
    <language>en_US</language>
</ListView>